Configure NODE_ENV.

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,7 @@
 command = "npm run ci"
 [build.environment]
   CI = "true"
+  NODE_ENV = "production"
 [[redirects]]
   from = "/*"
   to = "/index.html"
