--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@types/node": "11.13.5",
     "@types/react": "16.8.13",
     "@types/react-dom": "16.8.4",
+    "classnames": "^2.2.6",
+    "@types/classnames": "^2.2.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
